--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Random Users</string>
+    <string name="home_page_card_name">%1$s %2$s</string>
 </resources>
