--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Random Users</string>
+    <!--    'app_name' is defined in the gradle script  -->
     <string name="home_page_card_long_name">%1$s. %2$s %3$s</string>
     <string name="home_page_card_medium_title_name">%1$s. %2$s</string>
     <string name="home_page_card_medium_name">%1$s %2$s</string>
